<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_editName"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/action_editName"
        app:showAsAction="always"/>

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_addWord"
        android:icon="@drawable/ic_plus_white_24dp"
        android:title="@string/action_addWord"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_upload"
        android:icon="@drawable/ic_cloud_upload_white_24dp"
        android:title="@string/actionSave"
        app:showAsAction="ifRoom"/>

</menu>