<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fiszki.xyz.fiszkiapp.activities.SettingsActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/displayOrder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Th_1_header_text" />

            <Switch
                android:id="@+id/displayInSequence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displayInSequence" />

            <Switch
                android:id="@+id/displayRevSequence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displayReverseSequence" />

            <Switch
                android:id="@+id/displayRandomly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displayRandomly" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/Th1_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/displaySettings"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Th_1_header_text" />

            <Switch
                android:id="@+id/repeatNotKnown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeatNotKnown" />

            <Switch
                android:id="@+id/reverseLanguages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reverseLanguages" />

            <Switch
                android:id="@+id/createRevisionList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createRevisionList" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/Th1_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/inputMode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Th_1_header_text" />

            <Switch
                android:id="@+id/decisionMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decisionMode" />

            <Switch
                android:id="@+id/writeMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writeMode" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/Th1_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/textToSpeech"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Th_1_header_text" />

            <Switch
                android:id="@+id/ttsEnabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enableTextToSpeech" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speechSpeed"
                android:textAppearance="?android:attr/textAppearance" />

            <SeekBar
                android:id="@+id/ttsSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20" />

            <Switch
                android:id="@+id/skipBrackets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skipTextInBrackets" />

            <Switch
                android:id="@+id/autoReadWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/readWordsAutomatically" />

            <Switch
                android:id="@+id/autoReadTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/readTransAutomatically" />

            <!-- User interface -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/Th1_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/userInterface"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Th_1_header_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fontSize"
                android:textAppearance="?android:attr/textAppearance" />

            <SeekBar
                android:id="@+id/fontSizeBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:progress="10"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/Th1_divider" />

            <!-- User account -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/userAccount"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Th_1_header_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/wide_green_button"
                    android:text="@string/changeName"
                    android:textColor="@color/Th1_buttonColor_text"
                    android:onClick="changeName_onClick"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/wide_green_button"
                    android:text="@string/changePassword"
                    android:textColor="@color/Th1_buttonColor_text"
                    android:onClick="changePassword_onClick"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/wide_orange_button"
                    android:onClick="logout_onClick"
                    android:text="@string/logout"
                    android:textColor="@color/Th1_buttonColor_text" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/wide_red_button"
                    android:onClick="deleteAccount_onClick"
                    android:text="@string/deleteAccount"
                    android:textColor="@color/Th1_buttonColor_text" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
