<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <TextView
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Th_1_header_text"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/translateFromLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wordToTranslate"
        android:layout_marginBottom="5dp"
        android:textColor="@color/Th_1_dialog_label_text"/>

    <EditText
        android:id="@+id/wordToTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/flashcardName" />

    <TextView
        android:id="@+id/translateToLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wordTranslation"
        android:layout_marginBottom="5dp"
        android:textColor="@color/Th_1_dialog_label_text"/>

    <EditText
        android:id="@+id/wordTranslation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/flashcardName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:id="@+id/okButton"
            android:background="@color/Th1_acc_button"
            android:textColor="@color/Th1_buttonColor_text"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:background="@color/Th1_can_button"
            android:textColor="@color/Th1_buttonColor_text"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</LinearLayout>