<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fiszki.xyz.fiszkiapp.activities.LoginActivity" >

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleLarge"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/progressBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginIcon"
                android:background="@drawable/login_icon"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/loginLogoDesc"
                android:layout_marginBottom="40dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/emailArea"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/emailAddr"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_mail_outline_white_18dp"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/passwordArea"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_vpn_key_white_18dp"
                android:drawablePadding="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/loginLabel"
                android:id="@+id/loginButton"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_round_button"
                android:onClick="loginButton_onClick"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/Th1_buttonColor_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/forgotPassword"
                android:id="@+id/forgotPasswordLabel"
                android:layout_gravity="center_horizontal"
                android:onClick="forgotPassword_onClick"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/createAccount"
                android:id="@+id/createAccountLabel"
                android:layout_gravity="center_horizontal"
                android:onClick="createAccount_onClick"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activateAccount"
                android:id="@+id/activateAccountLabel"
                android:layout_gravity="center_horizontal"
                android:onClick="activateAccount_onClick"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
